test1/node-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: my-app
    spec:
      imagePullSecrets:
        - name: jenkinsmyregistrykey
      containers:
        - image: index.docker.io/linux17kartik/test:v10
          name: web
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: my-app
