test1/my-app-service.yaml
#[START my-app service]
---
  kind: Service
  apiVersion: v1
  metadata:
    name: my-app
    namespace: my-app
  spec:
   type: NodePort
   selector:
     app: my-app
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
       name: my-app-ui
#[END my-app service]
